--- a/Frontend/login.css
+++ b/Frontend/login.css
@@ -28,7 +28,7 @@
 
 /* Full-Screen Centering */
 body {
-  background: linear-gradient(to right, #2A69AE, #20418F);
+  background: linear-gradient(to right, #3c87d7, #6ccfeb);
   font-family: Arial, sans-serif;
   display: flex;
   flex-direction: column;
@@ -44,7 +44,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  background: rgba(255, 255, 255, 0.2);
+  background: linear-gradient(to right, #4facfe, #00f2fe);
   padding: 15px;
   display: flex;
   justify-content: flex-start;
@@ -72,7 +72,7 @@ body {
   width: 100%;
   max-width: 400px;
   padding: 30px;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(240, 128, 128, 0.1);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
   text-align: center;
@@ -119,7 +119,7 @@ body {
 .login-button {
   width: 100%;
   padding: 10px;
-  background: linear-gradient(to right, #2965AB, #204290);
+  background: linear-gradient(135deg,#ffcb00,#6ccfeb);
   color: white;
   border: none;
   border-radius: 5px;
@@ -128,7 +128,7 @@ body {
 }
 
 .login-button:hover {
-  background: linear-gradient(to left, #2965AB, #204290);
+  background: linear-gradient(to left,#ffcb00,#6ccfeb);
   transform: scale(1.01);
 }
 
@@ -189,7 +189,7 @@ body {
 }
 
 footer {
-  background: rgba(255, 255, 255, 0.2);
+  background: linear-gradient(to right, #4facfe, #00f2fe);
   color: white;
   padding: 20px 0;
   box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
