--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -28,13 +28,13 @@ body {
   margin: 0;
   padding: 0;
 }
+
 /* navbar */
 .navbar {
   display: flex !important;
   justify-content: space-evenly !important;
   align-items: center !important;
   padding: 10px 20px;
-
   font-family: Arial, sans-serif;
 }
 
@@ -119,6 +119,10 @@ header {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border: 2px solid rgb(0, 184, 245);
   border-radius: 5px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 9999;
 }
 header .container {
   display: flex;
@@ -152,6 +156,7 @@ header .nav-links a:hover {
 
 /* Hero Section */
 #hero {
+  margin-top: 100px;
   padding: 80px 0;
   background: linear-gradient(135deg, #2b6cb0, #1e3a8a);
   color: white;
@@ -202,6 +207,7 @@ header .nav-links a:hover {
 #features h3 {
   position: relative;
   font-size: 2.5rem;
+  margin-top: 100px;
   margin-bottom: 30px;
   text-align: center;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
