--- a/Frontend/feedback/feedback.css
+++ b/Frontend/feedback/feedback.css
@@ -30,15 +30,18 @@ body {
   margin: 0;
   overflow-x: hidden;
 }
+body.dark-mode {
+  background: #444;
+}
 .navbar {
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   background: rgba(255, 255, 255, 0.2);
-  padding: 15px;
+  padding: 1rem;
   display: flex;
-  height: 40px;
+  height: 65px;
   justify-content: flex-start;
   box-shadow: 0 4px 4px rgb(44, 44, 44);
 }
