--- a/Frontend/tech-stack/tech-stack.css
+++ b/Frontend/tech-stack/tech-stack.css
@@ -6,6 +6,18 @@ body {
   text-align: center;
 }
 
+.dark-mode-toggle{
+  margin-right: 25px;
+  width: 50px;
+  height: 40px;
+  border-radius: 10px;
+}
+
+.dark-mode-toggle:hover{
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
 body.dark-mode {
   background-color: #121212;
   color: #e0e0e0;
