--- a/Frontend/about/about.css
+++ b/Frontend/about/about.css
@@ -35,14 +35,7 @@ p {
 }
 
 .navbar {
-    display: flex;
-    justify-content: flex-start !important;
-    align-items: center;
-    background: rgba(255, 255, 255, 0.2);
-    padding: 12px 20px;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
+    justify-content: flex-end;
 }
 
 /* Back Button */
