--- a/Frontend/terms/terms.css
+++ b/Frontend/terms/terms.css
@@ -9,6 +9,7 @@ body {
   .containerterms {
     max-width: 800px;
     margin: 50px auto;
+    margin-top: 10rem;
     padding: 20px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
